# sea-battle

./: .clang-format  .clang-tidy  Application.cpp  Application.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Player.hpp  README.md  SeaBattle.cpp  SeaMap.cpp  SeaMap.hpp  conanfile.txt  main.cpp
lib/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.hpp
tests/: player_tests.cpp  sea_map_tests.cpp
